--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Wallet - Free Bootstrap 4 Product Landing Page Template</title>
+    <title>Wallet3</title>
     <meta name="description"
           content="Wallet is a beautiful Bootstrap 4 template for product landing pages."/>
 
